# chargellm

./: .dockerignore  .gitignore  CHANGELOG.md  LICENSE  README.en.md  README.md  chat.history.md
backend/: .env.example  README.md  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: admin.py  auth.py  charge.py  chat.py  datasets.py  dependencies.py  meta.py
backend/app/core/: config.py  security.py
backend/app/db/: session.py
backend/app/schemas/: __init__.py  admin_content.py  auth.py  battery.py  charge_order.py  chat.py
backend/app/services/: admin_content_service.py  agent_service.py  auth_service.py  battery_service.py  charging_data_service.py  chat_history_service.py  chat_service.py  content_safety.py  invite_service.py  sms_service.py  title_service.py
backend/app/services/tools/: __init__.py  base.py  implementations.py  (+1 more)
backend/docs/: api.md
backend/tests/: conftest.py  test_admin_extension.py  test_agent_loop.py  test_charging_data.py  test_chat.py  test_config.py  test_datasets.py  test_health.py  test_invite.py  test_sms.py
backend/tests/live/: conftest.py  test_agent_live_e2e.py  test_user_scenarios.py
model-training/: README.md  README.zh-CN.md  pyproject.toml  requirements.txt
model-training/dataset/: grpo.json  origin.jsonl  sft.json
model-training/docs/: sft_grpo_plan.md  vlm_time_series_plan.md
model-training/src/chargellm/: __init__.py  config.py
model-training/tests/: test_hf_builders.py  test_qwen_joint_preparation.py  test_reward_functions.py  test_sft_formatting.py  test_ts_qwen_collator.py
(+117 files in other folders)
