[project]
name = "chargellm-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "pydantic>=2.10.0",
    "sqlalchemy>=2.0.0",
    "uvicorn>=0.30.0",
    "pymysql>=1.1.0",
    "cryptography>=42.0.0",
    "sse-starlette>=2.1.0",
    "alibabacloud-green20220302>=2.0.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
# Live tests hit real vLLM/Aliyun/MySQL — opt-in only.
addopts = "--ignore=tests/live"
