[project]
name = "chargellm"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
	"accelerate>=1.4.0",
	"datasets>=3.1.0",
	"numpy>=2.1.0",
	"peft>=0.17.0",
	"pydantic>=2.10.0",
	"torch>=2.5.0",
	"transformers>=4.56.0",
	"trl>=0.29.0",
]

[project.optional-dependencies]
dev = [
	"pytest>=8.3.0",
	"pytest-cov>=6.0.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
